--- a/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
@@ -1,8 +1,8 @@
 <!-- begin plugins/tracker/message_individual_email_activity_report_table.tmpl -->
 
 <div>
-	<div style="max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;font-size:.75em">
-		<table  style="border:1px solid black;border-collapse: collapse;width:640px">
+	<div style="overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: scroll;max-height:480px">
+		<table  style="border:1px solid black;border-collapse: collapse;" width="100%">
 			<thead style="background-color:#999999;color:#FFFFFF;  text-align:center">
 				<tr style="background-color:#999999;color:#FFFFFF;  text-align:center">
 					<th colspan="3" style="background-color:#333333;color:#FFFFFF; text-align:center">
