--- a/dada/templates/plugins/tracker/country_geoip_table.tmpl
+++ b/dada/templates/plugins/tracker/country_geoip_table.tmpl
@@ -4,11 +4,11 @@
 
 <!-- tmpl_if c_geo_ip_report --> 
 	<div> 
-	 <div style="max-height: 400px; max-width:350px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;">
-	  <table  id="sortable_table_<!-- tmpl_var type -->" class="stripedtable tablesorter" style="width:325px">
+	 <div style="overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: scroll;max-height:480px">
+	  <table  id="sortable_table_<!-- tmpl_var type -->" class="tablesorter" width="100%">
        <thead> 			
 	    <tr> 
-	     <th >Country</th> 
+	     <th>Country</th> 
 	     <th  class="text-right"><!-- tmpl_var label --></th> 
 	    </tr> 
        </thead> 
