--- a/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
+++ b/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
@@ -2,9 +2,9 @@
 
 <!-- tmpl_if errors -->
 
-    <div class="alert-box info radius"> 
+    <div class="alert-box warning radius"> 
         <p>Something else may be needed, for FastCGI support:</p> 
-        <code><!-- tmpl_var errors escape="HTML" --></code>
+        <p><code><!-- tmpl_var errors escape="HTML" --></code></p>
     </div>
 <!-- tmpl_else --> 
     <div class="alert-box info radius"> 
