--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -84,7 +84,7 @@
 </p> 
 
 <form> 
-<div style="text-align:center"> 
+<div class="text-center"> 
 <input type="button" value="Move the, 'dada/installer' Directory, Disable the, 'install.cgi' script" class="cautionary button" id="move_installer_dir" />	
 </div> 
 </form> 
@@ -116,7 +116,7 @@
 
 
 <form action="<!-- tmpl_var submitted_PROGRAM_URL -->"> 
-	<div style="text-align:center"> 
+	<div class="text-center"> 
 		<input type="submit" class="processing bigger_button" value="&#187; Start Working With  <!-- tmpl_var PROGRAM_NAME -->! &#171;" />
 	</div>	
 </form>
