--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -81,7 +81,7 @@
 
 <!-- tmpl_if SHOW_ADMIN_LINK -->
 	
-	<p style="text-align:center">
+	<p class="text-center">
 	 <strong>
 	  <a href="<!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var ADMIN_FLAVOR_NAME -->/">
 	   Administration
