--- a/dada/templates/error_already_sent_unsub_confirmation_screen.tmpl
+++ b/dada/templates/error_already_sent_unsub_confirmation_screen.tmpl
@@ -62,7 +62,7 @@ address: </p>
 <input type="hidden" name="rm" value="u" > 
 <input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" > 
 
-<div style="text-align:center">
+<div class="text-center">
  <input type="submit" value="Resend Unsubscription Confirmation" > 
 </div> 
 </form>
