--- a/dada/templates/error_bad_setup_screen.tmpl
+++ b/dada/templates/error_bad_setup_screen.tmpl
@@ -38,7 +38,7 @@
 </p> 
 
 
-<div style="text-align:center">
+<div class="text-center">
 	<form accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="flavor" value="setup_info" > 
 		<input type="submit" value="Click Here For More Information..." class="cautionary button" > 
