--- a/dada/templates/error_mismatch_ip_on_confirm_screen.tmpl
+++ b/dada/templates/error_mismatch_ip_on_confirm_screen.tmpl
@@ -8,7 +8,7 @@
 <input type="hidden" name="flavor"          value="token" > 
 <input type="hidden" name="token"           value="<!-- tmpl_var t -->" > 
 <input type="hidden" name="simple_test" value="pass" > 
-<p style="text-align:center">	
+<p class="text-center">	
 	<input type="submit"                    value="       &#187; Confirm! &#171;       " class="processing bigger_button" > 
 </p>
 
