--- a/dada/templates/list/subscribed.tmpl
+++ b/dada/templates/list/subscribed.tmpl
@@ -26,7 +26,7 @@
 
     <form action="<!-- tmpl_var PROGRAM_URL -->" method="get">
         <input type="hidden" name="flavor" value="profile" >
-        <p style="text-align:center">
+        <p class="text-center">
          <input type="submit" value="Visit Your Profle" class="processing bigger_button" > 
 <br >
 to view all your subscriptions, and change your delivery preferences.
