--- a/dada/templates/list_confirm_unsubscribe.tmpl
+++ b/dada/templates/list_confirm_unsubscribe.tmpl
@@ -26,7 +26,7 @@
 <p>Upon receiving this message, you will need to follow a confirmation 
 URL, located in the message itself.</p>
 
-<p style="text-align:center">
+<p class="text-center">
  <a href="mailto:<!-- tmpl_var list_settings.list_owner_email -->">
   <!-- tmpl_var list_settings.list_owner_email -->
  </a>
