--- a/dada/templates/list_page_screen.tmpl
+++ b/dada/templates/list_page_screen.tmpl
@@ -116,7 +116,7 @@
 
 <!-- tmpl_if SHOW_ADMIN_LINK -->
 	
-	<p style="text-align:center">
+	<p class="text-center">
 	 <a href="<!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var SIGN_IN_FLAVOR_NAME -->/<!-- tmpl_var list_settings.list -->/">
 	  <strong>
 	   Administration
