--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -21,7 +21,7 @@
 		</p>
 	
 		<p>To be manually removed from this mailing list, please email the List Owner at:</p> 
-		<p style="text-align:center">
+		<p class="text-center">
 			<strong>
 				<a href="mailto:<!-- tmpl_var list_settings.list_owner_email -->?Subject=Unsubscription%20Request%20from%20<!-- tmpl_var list_settings.list_name escape=URL -->">
 					<!-- tmpl_var list_settings.list_owner_email -->
@@ -36,7 +36,7 @@
 	<fieldset> 
 		
 	<!-- tmpl_if list_settings.unsub_show_email_hint --> 
-	    <div style="text-align:center">
+	    <div class="text-center">
 		    <h1>Address Hint: <!-- tmpl_var email_hint --></h1> 
 	    </div> 
 	<!-- /tmpl_if -->
