--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -119,7 +119,7 @@
  as bug fixes and features may be added that you may want to take 
  advantage of.
 </p>
-<p style="text-align:center">
+<p class="text-center">
  <input type="button" class="plain button" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VER escape=URL -->" >
 </p>
 <hr >
@@ -141,7 +141,7 @@
 
 	<form method="get" action="http://dadamailproject.com/purchase/pro.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="ref" value="ms_scrn" > 
-		<p style="text-align:center">
+		<p class="text-center">
 		<input type="submit" value="Purchase Pro Dada!" class="processing button" >  
 		</p>
 	</form> 
@@ -164,7 +164,7 @@
  you'll be able to browse through faqs, instructions, tips and tricks, 
  and whatever else we can muster.
 </p>
-<p style="text-align:center">
+<p class="text-center">
  <strong>
   <a href="http://dadamailproject.com/support/" target="_blank">
    http://dadamailproject.com/support/
