--- a/dada/templates/send_url_email_process_screen.tmpl
+++ b/dada/templates/send_url_email_process_screen.tmpl
@@ -84,7 +84,7 @@
 <!--/tmpl_if--> 
 
 
-<div style="text-align:center">
+<div class="text-center">
  <!-- tmpl_include sending_monitor_button_widget.tmpl -->
 </div> 
 
