--- a/dada/templates/list/confirmation.tmpl
+++ b/dada/templates/list/confirmation.tmpl
@@ -62,7 +62,7 @@ Your confirmation email will be coming from: <a href="mailto:<!-- tmpl_var list_
 	the next twenty-four hours or you have any other questions regarding 
 	this mailing list, please contact the List Owner at: </p>
 
-	<p style="text-align:center">
+	<p class="text-center">
 	 <a href="mailto:<!-- tmpl_var list_settings.list_owner_email -->">
 	  <!-- tmpl_var list_settings.list_owner_email -->
 	 </a>
