--- a/dada/templates/plugins/global_config/default.tmpl
+++ b/dada/templates/plugins/global_config/default.tmpl
@@ -28,7 +28,7 @@ re-enabling it, and allowing you to use it to reconfigure your <!-- tmpl_var PRO
 	<input type="hidden" name="flavor" value="plugins" > 
 	<input type="hidden" name="plugin" value="global_config" > 
 	<input type="hidden" name="prm" value="reconfigure" > 
-	<div style="text-align:center">
+	<div class="text-center">
 	<input type="submit" value="       &#187; Reconfigure <!-- tmpl_var PROGRAM_NAME -->!  &#171;       " class="processing bigger_button" >
 </div>
 
