--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -5,12 +5,19 @@
 <div id="install_or_upgrade"></div> 
 
 <!-- tmpl_if found_existing_dada_files_dir --> 
-	<div class="alert-box info radius">
-		<p>Found an existing <!-- tmpl_var Dada_Files_Dir_Name --> directory at:</p>
-		<p class="text-center"><strong><!-- tmpl_var dada_files_parent_dir -->/.dada_files</strong></p> 
-		<p>Want to upgrade?</p>
+	<div class="row">
+		<div class="small-12 medium-8 large-8 medium-centered large-centered columns">
+			<div class="alert-box info radius" style="margin-top:2em">
+				<p>Found an existing <!-- tmpl_var Dada_Files_Dir_Name --> directory at:</p>
+				<p class="text-center"><strong><!-- tmpl_var dada_files_parent_dir -->/.dada_files</strong></p> 
+				<p>Want to upgrade?</p>
+			</div>
+		</div>
 	</div> 
 <!-- /tmpl_if -->
+
+	<div class="row">
+		<div class="small-12 medium-8 large-8 medium-centered large-centered columns">
 
 <fieldset> 	
 
@@ -20,100 +27,97 @@
 	id="install_or_upgrade_form"
 > 
 
-<div class="row">
-	<div class="small-12 columns">
-		<label for="install">
-			<input 
-				type="radio" 
-				name="install_type" 
-				id="install" 
-				value="install" 
-				<!-- tmpl_unless found_existing_dada_files_dir -->checked="checked"<!-- /tmpl_unless -->
-				class="installer_changeDisplayStateDivs" 
-				data-state="hide" 
-				data-target="upgrade_options"
-			>
-			Installation
-		</label>
-	</div>
-</div>
-<div class="row">
-	<div class="small-12 columns">
-		<label for="upgrade">
+			<div class="row">
+				<div class="small-12 columns">
+					<label for="install">
+						<input 
+							type="radio" 
+							name="install_type" 
+							id="install" 
+							value="install" 
+							<!-- tmpl_unless found_existing_dada_files_dir -->checked="checked"<!-- /tmpl_unless -->
+							class="installer_changeDisplayStateDivs" 
+							data-state="hide" 
+							data-target="upgrade_options"
+						>
+						Installation
+					</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					<label for="upgrade">
+							<input 
+								type="radio" 
+								name="install_type" 
+								id="upgrade" 
+								value="upgrade" 
+								<!-- tmpl_if found_existing_dada_files_dir -->checked="checked"<!-- /tmpl_if -->
+								class="installer_changeDisplayStateDivs" 
+								data-state="show" 
+								data-target="upgrade_options"
+							>
+							Upgrade
+					</label>
+				</div>
+			</div>
+
+			<div id="upgrade_options" <!-- tmpl_unless found_existing_dada_files_dir -->style="display:none"<!-- /tmpl_unless -->>
+
 				<input 
-					type="radio" 
-					name="install_type" 
-					id="upgrade" 
-					value="upgrade" 
-					<!-- tmpl_if found_existing_dada_files_dir -->checked="checked"<!-- /tmpl_if -->
-					class="installer_changeDisplayStateDivs" 
-					data-state="show" 
-					data-target="upgrade_options"
+					type="hidden" 
+					name="flavor" 
+					value="check_install_or_upgrade"
 				>
-				Upgrade
-		</label>
-	</div>
-</div>
 
-<div id="upgrade_options" <!-- tmpl_unless found_existing_dada_files_dir -->style="display:none"<!-- /tmpl_unless -->>
-
-	<input 
-		type="hidden" 
-		name="flavor" 
-		value="check_install_or_upgrade"
-	>
-
-	<!-- tmpl_if error_cant_find_dada_files_location --> 
+				<!-- tmpl_if error_cant_find_dada_files_location --> 
 	
-		<div class="alert-box info radius">
-			<p><strong>Sorry!</strong></p>
-			<p>Couldn't find a complete .dada_files directory structure at, <em><!-- tmpl_var current_dada_files_parent_location -->/.dada_files</em></p>
-			<p>Double-check the path is correct and all files/directories required exist.</p>
+					<div class="alert-box info radius">
+						<p><strong>Sorry!</strong></p>
+						<p>Couldn't find a complete .dada_files directory structure at, <em><!-- tmpl_var current_dada_files_parent_location -->/.dada_files</em></p>
+						<p>Double-check the path is correct and all files/directories required exist.</p>
 
-		</div>
-	<!-- /tmpl_if --> 
+					</div>
+				<!-- /tmpl_if --> 
 
-	<div class="row">
-		<div class="small-12 columns">
-			<label for="current_dada_files_parent_location">
-				Current .dada_files Location
-			</label>
-		</div>
-	</div>
-	<div class="row collapse">
-		<div class="small-8 columns">
-			<input 
-				type="text" 
-				name="current_dada_files_parent_location" 
-				id="current_dada_files_parent_location" 
-				value="<!-- tmpl_if found_existing_dada_files_dir --><!-- tmpl_var dada_files_parent_dir --><!-- /tmpl_if -->" 
-				class="text-right"
-			>
-		</div>
-		<div class="small-4 columns">
-			<input 
-				type="text" 
-				readonly="readonly"
-				value="/<!-- tmpl_var Dada_Files_Dir_Name escape=HTML -->"
-			>
-		</div>
-	</div>
-</div> 
+				<div class="row">
+					<div class="small-12 columns">
+						<label for="current_dada_files_parent_location">
+							Current .dada_files Location
+						</label>
+					</div>
+				</div>
+				<div class="row collapse">
+					<div class="small-8 columns">
+						<input 
+							type="text" 
+							name="current_dada_files_parent_location" 
+							id="current_dada_files_parent_location" 
+							value="<!-- tmpl_if found_existing_dada_files_dir --><!-- tmpl_var dada_files_parent_dir --><!-- /tmpl_if -->" 
+							class="text-right"
+						>
+					</div>
+					<div class="small-4 columns">
+						<input 
+							type="text" 
+							readonly="readonly"
+							value="/<!-- tmpl_var Dada_Files_Dir_Name escape=HTML -->"
+						>
+					</div>
+				</div>
+			</div> 
 
-<div class="row">
-  <div class="small-6 large-4 medium-5 small-centered medium-centered large-centered columns">
-		<input 
-			type="submit" 
-			name="submitbutton" 
-			value="&#187; Continue &#171;" 
-			class="processing large button expand"
-		>
-  </div>
-</div>
-	
-
+					<input 
+						type="submit" 
+						name="submitbutton" 
+						value="&#187; Continue &#171;" 
+						class="processing large button expand"
+					>
 
 </form>
 </fieldset> 
+		</div>
+	</div>
+
 
 <!-- end install_or_upgrade -->
