--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -89,12 +89,10 @@
 	<script type="text/javascript" src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/responsive-tables.js"></script>
 
 	
-	
-	
-    <style> 
-        table { 
-            border: 1px solid red; 
-        }
+	<style type="text/css"> 
+		table {
+			border: 1px solid red;
+		}
 		
 		iframe#archived_message_body_container {
 			height: 500px;
@@ -104,33 +102,34 @@
 		}
 		
 		.file-upload {
-		  position: relative;
-		  overflow: hidden;
-		  margin: 10px; }
+			position: relative;
+			overflow: hidden;
+			margin: 10px;
+		}
 
 		.file-upload input.file-input {
-		  position: absolute;
-		  top: 0;
-		  right: 0;
-		  margin: 0;
-		  padding: 0;
-		  font-size: 20px;
-		  cursor: pointer;
-		  opacity: 0;
-		  filter: alpha(opacity=0);
-	   }
+			position: absolute;
+			top: 0;
+			right: 0;
+			margin: 0;
+			padding: 0;
+			font-size: 20px;
+			cursor: pointer;
+			opacity: 0;
+			filter: alpha(opacity=0);
+		}
 		
-	   .tabs dd.active a, .tabs .tab-title.active a {
-	       border-top: 1px solid #000;
-	       border-left: 1px solid #000;
-	       border-right: 1px solid #000;
-	   }
+		.tabs dd.active a, .tabs .tab-title.active a {
+			border-top: 1px solid #000;
+			border-left: 1px solid #000;
+			border-right: 1px solid #000;
+		}
 	   
-	   #buttons { 
-		   z-index:100; 
-		   background-color:#fff
-	   }
-    </style> 
+		#buttons {
+			z-index: 100;
+			background-color: #fff
+		}
+	</style> 
     
 </head>
  <body id="Dada"> 
